--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, ::after, ::before {
+  box-sizing: inherit;
+}
+
+.body {
+  padding: 50px 25px;
+  max-width: 900px;
+  margin: auto;
+  background-image: url("money2.jpg");
+  background-size: 150px 150px;
+  background-position: left 50% bottom -40%;
+  background-repeat: repeat-x;
+  resize: both;
+  overflow: auto;
+  font-family: 'Montserrat', sans-serif;
 }
