--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html {
   margin: auto;
   background-image: url("money2.jpg");
   background-size: 150px 150px;
-  background-position: left 50% bottom -40%;
+  /* background-position: left 50% bottom -40%; */
   background-repeat: repeat-x;
   resize: both;
   overflow: auto;
